--- a/front/src/App.css
+++ b/front/src/App.css
@@ -6,3 +6,10 @@
     height: 300px;
     width: 100%;
 }
+
+.bucket-water {
+    width: 100%;
+    height: 0;
+    background-color: #007bff;
+    transition: all .5s;
+}
