--- a/front/src/App.css
+++ b/front/src/App.css
@@ -11,4 +11,13 @@
     width: 100%;
     height: 0;
     transition: all .5s;
+    position: relative;
+}
+
+.bucket-water .bucket-final {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -25px;
+    text-align: center;
 }
